# website

./: .gitignore  .gitmodules  README.md  index.html  site.hs  website.cabal
css/: default.css  sticky-footer-navbar.css
favicon/: manifest.json
fonts/Serif/: cmun-serif.css
posts/bayesian-logistic-regression/: index.md
posts/cramer-rao-bound-and-gauss-markov-theorem/: index.md
posts/discovering-prefixes-and-suffixes/: index.md
posts/probability-density-function-and-partial-differential-equation/: index.md
templates/: archive.html  default.html  post-list.html
